<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeMenuFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_explore_24"
        android:title="@string/map_option"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/emergencyFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_call_24"
        android:title="@string/emergency"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_person_outline_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        />
</menu>