<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/UsernameTextShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/UsernameText"
        app:layout_constraintTop_toBottomOf="@+id/UsernameText" />

    <TextView
        android:id="@+id/UsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:text="@string/username_profile"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NameTextShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/NameText"
        app:layout_constraintTop_toBottomOf="@+id/NameText" />

    <TextView
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/name_profile"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/UsernameText"
        app:layout_constraintTop_toBottomOf="@+id/UsernameText" />

    <TextView
        android:id="@+id/LastnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/lastname_profile"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/NameText"
        app:layout_constraintTop_toBottomOf="@+id/NameText" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/email_profile"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/LastnameText"
        app:layout_constraintTop_toBottomOf="@+id/LastnameText" />

    <TextView
        android:id="@+id/LastnameTextShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/EmailText"
        app:layout_constraintTop_toBottomOf="@+id/EmailText" />

    <TextView
        android:id="@+id/EmailTextShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/LastnameText"
        app:layout_constraintTop_toBottomOf="@+id/LastnameText" />

    <Button
        android:id="@+id/modificarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#3BBAFF"
        android:text="@string/modify_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastnameTextShow" />


</androidx.constraintlayout.widget.ConstraintLayout>