<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.ProfileUpdaterFragment">



    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/datosPersonales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">


        <TextView
            android:id="@+id/UsernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/username_profile"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/UsernameTextShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/UsernameText"
            app:layout_constraintTop_toBottomOf="@+id/UsernameText" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="Name"
            app:layout_constraintBottom_toBottomOf="@+id/UsernameTextShow"
            app:layout_constraintStart_toEndOf="@+id/UsernameText"
            app:layout_constraintTop_toTopOf="@+id/UsernameTextShow" />

        <TextView
            android:id="@+id/NameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/name_profile"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/UsernameText"
            app:layout_constraintTop_toBottomOf="@+id/UsernameText" />

        <TextView
            android:id="@+id/NameTextShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/NameText"
            app:layout_constraintTop_toBottomOf="@+id/NameText" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:text="Name"
            app:layout_constraintBottom_toBottomOf="@+id/NameTextShow"
            app:layout_constraintStart_toStartOf="@+id/editUsername"
            app:layout_constraintTop_toTopOf="@+id/NameTextShow" />

        <TextView
            android:id="@+id/LastnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/lastname_profile"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/NameText"
            app:layout_constraintTop_toBottomOf="@+id/NameText" />

        <TextView
            android:id="@+id/LastnameTextShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/LastnameText"
            app:layout_constraintTop_toBottomOf="@+id/LastnameText" />

        <EditText
            android:id="@+id/editLastname"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:text="Name"
            app:layout_constraintBottom_toBottomOf="@+id/LastnameTextShow"
            app:layout_constraintStart_toStartOf="@+id/editName"
            app:layout_constraintTop_toTopOf="@+id/LastnameTextShow" />

        <TextView
            android:id="@+id/EmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/email_profile"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/LastnameText"
            app:layout_constraintTop_toBottomOf="@+id/LastnameText" />

        <TextView
            android:id="@+id/EmailTextShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/EmailText"
            app:layout_constraintTop_toBottomOf="@+id/EmailText" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:text="Name"
            app:layout_constraintBottom_toBottomOf="@+id/EmailTextShow"
            app:layout_constraintStart_toStartOf="@+id/editLastname"
            app:layout_constraintTop_toTopOf="@+id/EmailTextShow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#073650"
        android:text="Eliminar cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificar" />

    <Button
        android:id="@+id/modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#3BBAFF"
        android:text="Guardar cambios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datosPersonales" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/popup"
        android:layout_width="260dp"
        android:layout_height="400dp"
        android:background="@drawable/rectangle_solid_light_blue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/advertencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="¿Deseas borrar tu cuenta?"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rectangleBorder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rectangle"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:backgroundTint="#073650"
            android:text="Confirmar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/notificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="Este paso es irreversible y una vez eliminada la cuenta perderás los datos asociados y serás enviado de vuelta a la pantalla de inicio de sesión. Se recomienda encarecidamente que se valore esta decisión antes de tomarla"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/advertencia" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>